// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <p>
    Viewing 
    2
     
    expenses
     totalling 
    $1,542.22
  </p>
</div>
`;

exports[`should render ExpensesSummary correctly with single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    $110.12
  </p>
</div>
`;
